# canvasxpress-python

./: .gitignore  .readthedocs-custom-steps.yml  .readthedocs.yaml  .readthedocs.yml  LICENSE  README.md  agents.md  build.sh  build_docs.sh  build_local.sh  build_pkg_setup.py  distribute_package.sh  generate_docs.sh  generate_setup_instructions.py  init-allure.sh  init-drivers.sh  init-project.sh  init-webdrivers.sh  mkdocs.yml  package-lock.json  package.json  pydoc-markdown.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-project.txt  requirements.txt  tasks.py
.circleci/: config.yml
canvasxpress/: __init__.py  canvas.py  plot.py
canvasxpress/config/: __init__.py  collection.py  type.py
canvasxpress/data/: __init__.py  base.py  convert.py  keypair.py  matrix.py  profile.py  text.py  url.py
canvasxpress/js/: __init__.py  collection.py  function.py
canvasxpress/render/: __init__.py  base.py  dash.py  environment.py  image.py  json.py  jupyter.py  popup.py  rstudio.py  shiny.py  streamlit.py  streamlit_new.py
canvasxpress/util/: example_generator.py  template.py
cxdash/: CXDashElement.py  CXDashElement.py~origin_develop  __init__.py~origin_develop  _imports_.py~origin_develop  cxdash.min.js  cxdash.min.js.map  metadata.json  package-info.json
cxstreamlit/: __init__.py
docs/: api-documentation.md  api.md  data.md  examples.md  index.md  license.md  status.md
plotly/: build-local.sh  init-project.sh
readme/: data.md  examples.md  readme.md  status.md
streamlit/: build-local.sh  requirements.txt
util/: generate_tutorials.py
(+868 files in other folders)
