[build-system]
requires = [
    "setuptools>=58.2",
    "wheel>=0.37"
]
build-backend = "setuptools.build_meta"

[yapf]
BASED_ON_STYLE = google
SPACES_BEFORE_COMMENT = 4
COLUMN_LIMIT = 100
BLANK_LINE_BEFORE_NESTED_CLASS_OR_DEF = True
BLANK_LINES_BETWEEN_TOP_LEVEL_IMPORTS_AND_VARIABLES = 2
DEDENT_CLOSING_BRACKETS = True
EACH_DICT_ENTRY_ON_SEPARATE_LINE = True
FORCE_MULTILINE_DICT = True
INDENT_BLANK_LINES = True
NO_SPACES_AROUND_SELECTED_BINARY_OPERATORS = True
SPACES_AROUND_DICT_DELIMITERS = True
SPACES_AROUND_LIST_DELIMITERS = True
SPACES_AROUND_TUPLE_DELIMITERS = True
SPACES_BEFORE_COMMENT = 2
SPACE_BETWEEN_ENDING_COMMA_AND_CLOSING_BRACKET = True
SPACE_INSIDE_BRACKETS = True
SPLIT_ALL_TOP_LEVEL_COMMA_SEPARATED_VALUES = True
SPLIT_BEFORE_DICT_SET_GENERATOR = True
SPLIT_BEFORE_DOT = True
SPLIT_BEFORE_EXPRESSION_AFTER_OPENING_PAREN = True
SPLIT_BEFORE_FIRST_ARGUMENT = True
SPLIT_COMPLEX_COMPREHENSION = True
